# director2

./: .env.example  .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
director/: __init__.py  cli.py  config.py  errors.py  logging_setup.py
director/agents/: base.py  roles.py  runner.py
director/bench/: __init__.py  covert_channel.py  covert_channel_v2.py  craft_probe.py  cross_lab_rde.py  dialogue_compact.py  dose_response.py  driver.py  eden.py  eden_view.py  faults.py  free_defection.py  grok_cross_lab.py  grok_dialogue.py  homeostat_curve.py  live_escalate.py  oracle_humility_probe.py  persistence.py  persistence_state.py  provenance_audit.py  provenance_test.py  rde_error_prediction.py  report.py  (+11 more)
tests/: conftest.py  test_agents.py  test_arc_hardening.py  test_async_router.py  test_bench.py  test_calibration.py  test_claude_cli.py  test_cli.py  test_convictions.py  test_credit_knife.py  test_dashboard.py  test_dashboard_nervous.py  test_dialogue_compact.py  test_director.py  test_dose_response.py  test_eden_relay.py  test_evolve.py  test_execution_grounding.py  test_fast_routing.py  test_grok_channel.py  test_grok_collab.py  test_gut_markers.py  test_homeostat.py  test_homeostat_curve.py  test_homeostat_integration.py  test_hooks.py  test_hooks_ext.py  test_integrity_cli.py  test_latch_decide_status.py  test_latch_state_machine.py  test_live_findings.py  test_llm.py  test_markers.py  test_memory.py  test_nervous_config.py  test_nervous_counters.py  test_nervous_types.py  test_packet_context_override.py  test_partial_verification.py  test_persistence.py  (+20 more)
(+478 files in other folders)
